Fix figcaption on dark mode style.css + style for figcaptions
*index.html
+ remove or update figcaption inline style

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,6 +65,9 @@ article{
     }
 }
 
+figcaption{
+    color: gray;
+}
 
 /*
 Dark mode
